--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -1,8 +1,23 @@
 {
   "name": "@finney/rpc",
-  "version": "0.0.1",
-  "module": "index.ts",
-  "type": "module",
+  "version": "0.0.2",
+  "description": "A dependency-free TypeScript client for Bitcoin Core's JSON-RPC",
+  "main": "./dist/index.js",
+  "files": [
+    "dist/package.json",
+    "dist/*.js",
+    "dist/**/*.js",
+    "dist/**/*.d.ts",
+    "dist/*.d.ts"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js"
+    }
+  },
+  "scripts": {
+    "build": "tsc ./index.ts --outDir ./dist --declaration"
+  },
   "devDependencies": {
     "bun-types": "^0.3.0"
   }
